@@ -169,6 +169,8 @@ pwm3	AT90PWM3
 8535	AT90S8535
 m103	ATmega103
 m128	ATmega128
+m1280   ATmega1280
+m1281   ATmega1281
 m16	ATmega16
 m161	ATmega161
 m162	ATmega162
@@ -181,6 +183,7 @@ m329	ATmega329
 m3290	ATmega3290
 m48	ATmega48
 m64	ATmega64
+m640    ATmega640
 m644	ATmega644
 m649	ATmega649
 m6490	ATmega6490
